

                              Kiji Schema Release Notes

Version 1.0.2
  * SCHEMA-314. Row filters constructors are being replaced with
      factory methods such Filters.and(...) and Filters.or(...).
  * SCHEMA-303. Allows proper serialization of row filters.
      Contributed by Jeff Kolesky (jeff.kolesky@gmail.com).

Version 1.0.1
  * SCHEMA-254. Adds cellList methods to KijiRowData.
  * SCHEMA-296. Adds hashCode and equals methods for Filters.

Version 1.0.0
  * SCHEMA-227. Fix get/scan behavior on tables with no families.
  * SCHEMA-284. Fix usage doc string for kiji scan --start-row/limit-row flags.
  * SCHEMA-37. Adds stability annotations to all classes.
  * SCHEMA-280. Removes deprecated close() method from KijiTable.  Use
      table.release().
  * SCHEMA-8. Adds Schema Table Tool for reading and writing to a KijiSchemaTable.
  * SCHEMA-115. KijiManagedHBaseTableName no longer manages names for SchemaV5
      tables.
  * SCHEMA-287. Suppress slf4j classpath warnings without modifying classpath.
  * SCHEMA-189. Adds KijiBufferedWriter.
  * SCHEMA-106. Move CellSpec to org.kiji.schema.layout and mark as Framework.

Version 1.0.0-rc5
  * SCHEMA-240. Composite key format support in all CLI tools.
  * SCHEMA-134. Hides KijiDataRequestValidator's constructor and
      changes validate()'s signature. Framework developers should
      use the factory method validatorForLayout() to get a validator
      which can validate KijiDataRequests against a table layout.
  * SCHEMA-261. Bugfix: Restrict KijiRowData.getValues(family) and
      getMostRecentValues() to only work on map-type column families.
  * SCHEMA-238. Adds a warning for new tables created with a layout
      that uses RowKeyFormat. New tables should be made with RowKeyFormat2.
  * SCHEMA-239. KijiTable.close() is deprecated, use KijiTable.release().
  * SCHEMA-262. KijiPager and KijiRowScanner throw unchecked KijiIOException.
  * SCHEMA-173. Improves CLI parsing of EntityIds.  Adds abstract