@@ -3,6 +3,7 @@
                               Kiji Schema Release Notes
 
 Version 1.0.2
+  * SCHEMA-317. Silence spurious warning about not using GenericOptionsParser.
   * SCHEMA-314. Row filters constructors are being replaced with
       factory methods such Filters.and(...) and Filters.or(...).
   * SCHEMA-303. Allows proper serialization of row filters.
